# Simple-Automation-Builder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/api/: capture.py  iterate.py  projects.py  recommend.py  simulate.py
backend/app/core/: __init__.py  claude.py  config.py  prompts.py
backend/app/models/: __init__.py  equipment.py  iteration.py  project.py  recommendation.py  simulation.py  space.py
backend/app/services/: catalog.py  controllers.py  downloader.py  iteration.py  planner.py  project_status.py  reconstruction.py  room.py  scene.py  scene_export.py  scene_validation.py  simulator.py  (+2 more)
backend/tests/: conftest.py  test_catalog.py  test_claude_client.py  test_config.py  test_controllers.py  test_downloader.py  test_e2e_pipeline.py  test_iteration.py  test_models.py  test_planner.py  test_prompts.py  test_reconstruction.py  test_room.py  test_scene.py  test_scene_export.py  test_simulator.py  test_spatial_anchors.py  test_validation.py  test_vision.py
docs/: competitive-analysis.md  pipeline-analysis.md  plan-simulation-quality.md
docs/archive/: plan-persistent-state.md
docs/scene-editor-merge/: DEVELOPMENT_PLAN.md
docs/spatial-grounding/: DEVELOPMENT_PLAN.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
knowledge-base/equipment/: cameras.json  conveyors.json  fixtures.json  manipulators.json
prompts/: iteration.md  recommendation.md  vision_analysis.md
scripts/: pre-commit
(+49 files in other folders)
